@@ -62,6 +62,7 @@ class Config(object):
         trim_doctest_flags = (True, 'env'),
         default_domain = ('py', 'env'),
         needs_sphinx = (None, None),
+        nitpicky = (False, 'env'),
 
         # HTML options
         html_theme = ('default', 'html'),
